kyverno/policies/ingress/disallow-default-tsloptions.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-default-tlsoptions
  annotations:
    policies.kyverno.io/title: Disallow Default TLSOptions
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: TLSOption
    policies.kyverno.io/description: >-
      The TLSOption CustomResource sets cluster-wide TLS configuration options for Traefik when
      none are specified in a TLS router. Since this can take effect for all Ingress resources,
      creating the `default` TLSOption is a restricted operation. This policy ensures that
      only a cluster-admin can create the `default` TLSOption resource.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - traefik.io
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - tlsoptions
  matchConditions:
    - name: is-default
      expression: "object.metadata.name == 'default'"
  validations:
    - expression: "'system:masters' in request.userInfo.groups"
      message: "Only cluster administrators are allowed to set default TLSOptions."
