kyverno/policies/ingress/disallow-or-operator.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-or-operator
  annotations:
    policies.kyverno.io/title: Disallow OR Operator
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: IngressRoute,IngressRouteTCP
    policies.kyverno.io/description: >-
      Using || can allow you to subvert other restrictions and hijack traffic
      with non-specific rules that match generic paths or headers
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - traefik.containo.us
          - traefik.io
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingressroutes
          - ingressroutetcps
  validations:
    - expression: >-
        object.spec.?routes.orValue([]).all(route, !route.?match.orValue('').contains('||'))
      message: "Route matches must not contain ||"
