kyverno/policies/ingress/disallow-wildcard-hostsni.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-wildcard-hostsni
  annotations:
    policies.kyverno.io/title: Disallow Wildcard HostSNI
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: IngressRouteTCP
    policies.kyverno.io/description: >-
      Prevent IngressRouteTCP from hijacking all traffic by preventing wildcard
      HostSNIs.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - traefik.io
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingressroutetcps
  validations:
    - expression: >-
        object.spec.?routes.orValue([]).all(route, !route.?match.orValue('').matches('HostSNI\\(`.*\\*.*`\\)'))
      message: "HostSNI rules must not contain a wildcard host '*'"
