kyverno/policies/ingress/test/test-disallow-or-operator.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-or-operator-not-allowed-ingressroutetcp
spec:
  routes:
    - match: HostSNI(`example.com || example.co.uk`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-or-operator-not-allowed-ingressroute
spec:
  routes:
    - match: Host(`||`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-or-operator-complex-not-allowed-ingressroute
spec:
  routes:
    - match: Host(`example.com || example.co.uk`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-or-operator-valid
spec:
  routes:
    - match: Host(`example.com`)
