kyverno/policies/ingress/test/test-disallow-wildcard-hostsni.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-hostsni-not-allowed
spec:
  routes:
    - match: HostSNI(`*`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-subdomain-hostsni-not-allowed
spec:
  routes:
    - match: HostSNI(`*.example.com`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-hostsni-not-allowed-multiple-routes
spec:
  routes:
    - match: HostSNI(`example.com`)
      priority: 10
    - match: HostSNI(`*`)
      priority: 20
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-valid-hostsni
spec:
  routes:
    - match: HostSNI(`example.com`)
