kyverno/policies/ingress/test/test-require-ingressroute-host.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-require-ingressroute-host-missing
spec:
  routes:
    - match: PathPrefix(`/`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-require-ingressroute-bad-host
spec:
  routes:
    - match: Host(`example.c`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-require-ingressroute-host-valid
spec:
  routes:
    - match: Host(`example.com`)
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-require-ingressroute-host-valid-with-path
spec:
  routes:
    - match: "Host(`example.com`) && PathPrefix(`/`)"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: with-host
spec:
  rules:
    - host: example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: without-host
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
