kyverno/policies/ingress/test/cluster-resources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: cluster-resources
spec:
  crds:
    - ../../../../traefik/cluster/crds/traefik/crds/traefik.io_ingressroutes.yaml
    - ../../../../traefik/cluster/crds/traefik/crds/traefik.io_ingressroutetcps.yaml
    - ../../../../traefik/cluster/crds/traefik/crds/traefik.io_tlsoptions.yaml

  resources:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: default
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: namespace
