kyverno/policies/ingress/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-ingress-and-traefik-resources
clusterResources:
  - cluster-resources.yaml
policies:
  - ../disallow-default-tsloptions.yaml
  - ../disallow-or-operator.yaml
  - ../disallow-wildcard-hostsni.yaml
  - ../external-dns-domain-label-length.yaml
  - ../require-ingress-host.yaml
  - ../require-ingressroute-host.yaml
resources:
  - test-disallow-or-operator.yaml
  - test-disallow-wildcard-hostsni.yaml
  - test-external-dns-domain-label-length.yaml
  - test-require-ingressroute-host.yaml
  - test-tlsoption.yaml
userinfo: userinfo-admin.yaml
results:
  - policy: disallow-default-tlsoptions
    rule: disallow-default-tlsoptions
    isValidatingPolicy: true
    resources: ["non-default"]
    kind: TLSOption
    result: skip

  - policy: disallow-default-tlsoptions
    rule: disallow-default-tlsoptions
    isValidatingPolicy: true
    resources: ["default"]
    kind: TLSOption
    result: fail

  # Test OR operator
  - policy: disallow-or-operator
    resources: ["test-or-operator-not-allowed-IngressRouteTCP"]
    kind: IngressRouteTCP
    result: fail
  - policy: disallow-or-operator
    resources:
      [
        "test-or-operator-not-allowed-IngressRoute",
        "test-or-operator-complex-not-allowed-IngressRoute",
      ]
    kind: IngressRoute
    result: fail
  - policy: disallow-or-operator
    resources: ["test-or-operator-valid"]
    kind: IngressRoute
    result: pass

  # Test Wildcard HostSNI for ingressRouteTCP resources
  - policy: disallow-wildcard-hostsni
    rule: default
    resources:
      [
        "test-wildcard-hostsni-not-allowed",
        "test-wildcard-subdomain-hostsni-not-allowed",
        "test-wildcard-hostsni-not-allowed-multiple-routes",
      ]
    kind: IngressRouteTCP
    result: fail
  - policy: disallow-wildcard-hostsni
    rule: default
    resources: ["test-wildcard-hostsni-match-missing"]
    kind: IngressRouteTCP
    result: skip
  - policy: disallow-wildcard-hostsni
    rule: default
    resources: ["test-valid-hostsni"]
    kind: IngressRouteTCP
    result: pass

  # Test Ingress Require Host
  - policy: require-ingress-host
    resources: ["with-host"]
    kind: IngressRoute
    result: pass
  - policy: require-ingress-host
    resources: ["without-host"]
    kind: IngressRoute
    result: fail

  # Test Ingress Route Require Host
  - policy: require-ingressroute-host
    rule: default
    resources:
      [
        "test-require-ingressroute-host-missing",
        "test-require-ingressroute-bad-host",
      ]
    kind: IngressRoute
    result: fail
  - policy: require-ingressroute-host
    rule: default
    resources:
      [
        "test-require-ingressroute-host-valid",
        "test-require-ingressroute-host-valid-with-path",
      ]
    kind: IngressRoute
    result: pass

  # Test External DNS naming constraints
  - policy: external-dns-domain-label-length
    rule: domain-label-limit
    resources: ["no-external-dns-anno"]
    kind: Ingress
    result: skip
  - policy: external-dns-domain-label-length
    rule: domain-label-limit
    resources: ["test-short-domain-label"]
    kind: Ingress
    result: pass
  - policy: external-dns-domain-label-length
    rule: domain-label-limit
    resources: ["test-long-domain-label"]
    kind: Ingress
    result: fail
